[tool.poetry]
name = "drivr"
version = "0.1.0"
description = ""
authors = ["Renan Gomes <renan.gomes@live.com>"]

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.pytest.ini_options]
minversion = "6.2.1"
addopts = "-s -rf"
testpaths = [
    "tests/unit",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"
PyJWT = "^2.0.0"
python-multipart = "^0.0.5"
passlib = "^1.7.4"
argon2-cffi = "^20.1.0"
psycopg2 = "^2.8.6"
pydantic = {extras = ["email"], version = "^1.7.3"}

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
isort = "^5.7.0"
black = "^20.8b1"
pylama = "^7.7.1"
pydocstyle = "^5.1.1"
pytest = "^6.2.1"
pytest-mock = "^3.5.1"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.10.1"
Faker = "^5.6.0"
coverage = "^5.3.1"
requests = "^2.25.1"
behave = "^1.2.6"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
